maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:23: error: not found: value aMurSud
    if (!aMurSud(x,y)) {
         ^ShortestPathMaze:26: error: not found: value aMurEst
    if (!aMurEst(x,y)) {
         ^