maze.shortestpath.ShortestPathMaze.scala.code
var x = 0
var y = 0
var cpt = 0
override def run() {
	for (i<-1 to getMondeLargeur-1) {
    for (j<-1 to getMondeHauteur-1) {
      if (aBiscuit(i,j)) {
        setIndication(i,j,0)
        x=i
        y=j
      }
    }
  }
  while (true) {
    if (!aMurNord(x,y)) {
      setIndication(x+1,y,cpt)
      cpt+=1
    }
    if (!aMurOuest(x,y)) {
      setIndication(x,y-1,cpt)
    }
    if (!aMurSud(x,y)) {
      setIndication(x-1,y,cpt)
    }
    if (!aMurEst(x,y)) {
      setIndication(x,y+1,cpt)
    }
  }
}